   when receiving DTMF.  Use the 'j' option to enable extension jumping. Also
   changed arguments to SayUnixTime so that every option is truly optional even
   when using multiple options (so that j option could be used without having to
   manually specify timezone and format) There are other beneftis eg. format can
   now be used without specifying time zone as well.

CDR postgresql driver changes
-----------------------------
 * Added command "cdr show pgsql status" to check connection status

AMI (Asterisk Manager Interface) changes
----------------------------------------
 * Originate now generates an error response if the extension given
   is not found in the dialplan

FAX changes
-----------
 * FAXOPT(faxdetect) will enable a generic fax detect framehook for dialplan
   control of faxdetect.

DUNDi changes
-------------
 * Allow the built in variables ${NUMBER}, ${IPADDR} and ${SECRET} to be
   used within the dynamic weight attribute when specifying a mapping.

Dialplan functions
------------------
 * Addition of the VM_INFO function that can be used to retrieve voicemail
   user information, such as the email address and full name.
   The MAILBOX_EXISTS dialplan function has been deprecated in favour of
   VM_INFO.

Followme changes
-------------
 * A new option, 'I' has been added to app_followme.
   By setting this option, Asterisk will not update the caller with
   connected line changes when they occur.  This is similar to app_dial
   and app_queue.
 * The 'N' option is now ignored if the call is already answered.

RTP changes
-------------
 * A new option, 'probation' has been added to rtp.conf
   RTP in strictrtp mode can now require more than 1 packet to exit learning
   mode with a new source (and by default requires 4). The probation option
   allows the user to change the required number of packets in sequence to any
   desired value. Use a value of 1 to essentially restore the old behavior.